tests/pragmas/tcompile_missing_file.nim
discard """
  joinable: false
  errormsg: "cannot find: noexist.c"
"""
{.compile: "noexist.c".}
